prevgen/bazarr/bazarr.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: bazarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: bazarr.lab.tailandtraillabs.com
    external-dns.alpha.kubernetes.io/target: intrepid.hangar.bpfx.org
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`bazarr.lab.tailandtraillabs.com`)
      services:
        - name: bazarr
          port: 6767
  tls:
    secretName: wildcard-tls-prod
